feat: add end-of-day posting
